--- a/ klcommon --username zmhn320@163.com/klhttpd/bin/www/index.html
+++ b/ klcommon --username zmhn320@163.com/klhttpd/bin/www/index.html
@@ -7,4 +7,5 @@
 <h1>Test HTML for klhttpd</h1>
 <img src="src.jpg">
 <a href="klhttpd.exe">Download klhttpd</a>
+<a href ="test cgi.html">Test CGI</a>
 </body>
